--- a/apps/mylogin/templates/mylogin/success.html
+++ b/apps/mylogin/templates/mylogin/success.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Success</title>
-    <meta http-equiv="refresh" content="5;url=/" />
+    <meta http-equiv="refresh" content="1;url=/" />
 </head>
 <body>
     {% if request.session.first_name %}
@@ -14,6 +14,6 @@
             <p style="color:green;">{{message}}</p>
         {% endfor %}
     {% endif %}
-    <h4>Redirecting in 5 seconds...</h4>
+    <h4>Redirecting...</h4>
 </body>
 </html>
