--- a/apps/mypokeapp/templates/mypokeapp/index.html
+++ b/apps/mypokeapp/templates/mypokeapp/index.html
@@ -60,7 +60,7 @@
             </tr>
             {% for person in allusers %}
                 <tr>
-                    <td>{{person.id}}</td>
+                    <td>{{person.name}}</td>
                     <td>{{person.alias}}</td>
                     <td>{{person.email}}</td>
                     <td>{{person.poke_target.all.count}}</td>
